    - The `Break' button is now named `Interrupt' (as in DDD 1.x), to
      avoid confusion with the `Break At' button.  The `Quit' menu
      item is now named `Abort', to avoid confusion with the `Exit'
      menu item (which issues a `quit' command).
    - DBX settings can now be viewed and changed at run time.
    - Reading the VSL library is now realized as a background job.
    - If the debugged program is interrupted while grabbing the
      pointer (while being in a popup menu or in a modal dialog, for
      instance), DDD will automatically make the program ungrab it.
    - Several single-letter options like `-d DIR' are now passed down to the
      inferior debugger.

    Changes in configuration and building:
    - DDD 2.1 uses improved configuration checks from Autoconf 2.11.
    - DDD no longer installs in the `gcc' location by default, but in
      an existing DDD location; otherwise, in `/usr/local/bin'.
    - Improved means of determining builder's e-mail address.
    - Beta releases expire after a few months.

    Bug fixes:
    - Using DBX, comments were stripped from source code under certain
      circumstances.  Fixed.
    - The sash to resize the assembler window is back again.
    - With XDB, sources are found in alternate directories, too.
    - With DBX, the current source line was omitted from the listing
      under certain circumstances.  Fixed.
    - `Help on Version' no longer includes the entire DDD configuration.
    - Buttons ending in `...' insert their name, followed by a space.
    - The `vsl' and `test-graph' programs can again be built.


DDD 2.0
-------

    DDD 2.0 brings XDB support, extended DBX support, an improved user
    interface as well as several new features and bug fixes.

    User-visible changes to DDD 1.4:
    - New command tool.  All command buttons that do not take
      arguments are now located in the command tool, a small separate
      window.  The command tool can be moved wherever appropriate,